# eyeplay

./: CMakeLists.txt  PlayPredictor.py  cameradetect.py  cameradetectdemo.py  cardgamesim.py  cardrecognizer.py  clientside.py  dlib-object-detect.py  dnn-process.cpp  fastdetect.py  imglab  improvement.py  keras-demo.py  motiondetect.py  serverside.py  siftdetect.py  simpledetect.py  singleframe.py  testcase-record.py  tmp.py  value2det.py  waterbottle.py
machine-learned/: detector-c15.svm  detector-c2-norot.svm  detector-c20[norot.svm  detector-c5-norot.svm  detector-c50.svm  detector-c50mod.svm  detector-n50.svm  detector-new20.svm  detector-new50.svm
machinelearning-demos/: applesandoranges.py  first-classifier.py  image_classifier.py  learnlines.py  spam-filter.py
testcases/: trainset.xml
