cmake_minimum_required(VERSION 2.8)
project( dnn-test )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package( OpenCV REQUIRED )
find_package(dlib REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
#include(~/Downloads/dlib/CMakeLists.txt)
#set(dlib_DIR ~/Downloads/dlib/dlib/cmake_utils)
add_executable(dnn-test  dnn-process.cpp )
add_dependencies(dnn-test OpenCV)
add_dependencies(dnn-test dlib)
target_link_libraries(dnn-test ${dlib_LIBS} ${OpenCV_LIBS})
